Fix small jump when thumbs are available

--- a/demos/reddit/app.css
+++ b/demos/reddit/app.css
@@ -37,7 +37,7 @@
     vertical-align: middle;
 }
 
-.thumb {
+.thumb, .loading-thumb {
     width: 50px;
     height: 50px;
     background-repeat: no-repeat;
